# random_search-lib

./: .gitignore  README  configure.ac
include/: random_search.h
src/: Makefile.am  random_search.c
